--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_PATH=./build node build/index.js",
     "build": "tsc -p .",
     "dev": "nodemon src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --ext .js,.ts ."
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,12 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "babel-eslint": "^10.0.1",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint": "^6.8.0",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.1.3",
