--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "NODE_PATH=./build node build/index.js",
     "build": "tsc -p .",
     "dev": "nodemon src/index.ts",
-    "test": "jest",
-    "lint": "eslint --ext .js,.ts ."
+    "test": "jest --silent --verbose --coverage --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -23,21 +22,23 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "babel-eslint": "^10.0.1",
+    "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint": "^6.8.0",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
+    "redis-mock": "^0.56.3",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "@types/node-uuid": "0.0.29",
-    "bluebird": "^3.7.2",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "node-uuid": "^1.4.8",
