--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,29 +3,31 @@ version: '3.7'
 services:
   redis-dev:
     image: redis
-    container_name: redis-cache
+    container_name: redis-dev
     ports:
       - "6379:6379"
     expose:
       - 6379
-    command: --save 1 1 --loglevel warning
+    command: --port 6379 --save 1 1 --loglevel warning
     restart:
       always
 
-  server:
+  server-dev:
     build:
       context: .
       dockerfile: Dockerfile
       target: base
     environment:
       - NODE_ENV=development
+      - SERVER_PORT=4000
       - REDIS_HOST=redis-dev
+      - REDIS_PORT=6379
     links:
       - redis-dev
     volumes:
       - ./src:/home/node/app/src
       - ./nodemon.json:/home/node/app/nodemon.json
-    container_name: server-docker
+    container_name: server-dev
     depends_on:
       - redis-dev
     expose:
